test: fix plugin rendering test cut off axis title

--- a/examples/plugins/style.css
+++ b/examples/plugins/style.css
@@ -1,6 +1,7 @@
 html,
 body {
-  height: 100%;
+  height: 95%;
+  width: 95%;
 }
 
 #object {
@@ -16,10 +17,4 @@ body {
 
 #object:first-child {
   margin-right: 12px;
-}
-
-.toolbar {
-  background-color: white;
-  margin: 12px 0px;
-  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.1);
 }
